--- a/index.html
+++ b/index.html
@@ -1,1 +1,102 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Laura Sanches</title>
+</head>
+  <body>
+    <section class="capa">
+          <div class="sobreocurso">
+            <img class="Senai" src="imagens/SENAI.png" alt="">
+            <h1>Multmídia</h1>
+            <h3>SENAI - José Bonifácio</h3>
+            <p>Projeto Individual</p>
+            <p>Sprint 4 - 1º semestre - Turma 2023</p>
+        </div>
+        
+    </section>
+    <section class="aluno">
+        <div class="sobremim">
+            <img class="fotolaura"src="imagens/158A2883.jpg" alt="foto perfil laura">
+        </div>
+        <div class="sobremim">
+            <h2>Laura Sanches Pereira</h2>
+            <p>Eu sou a Laura, tenho 16 anos e atualmente sou aluna do Senai. Gosto de cozinhar e ouvir música. Fazemos varios projetos no Senai e eu espero aprender muito mais.</p> 
+         </div>
+    </section>
+    <section class="portfolio">
+        <div class="port-list">
+            <img class="logo" src="imagens/Frame 5.png" alt="logo LinkedIn">
+            <h2>LinkedIn</h2>            
+        </div>
+        <div class="port-list">           
+            <img class="logo" src="imagens/Frame 6.png" alt="logo github">
+            <h2>Github</h2>
+        </div>
+        <div class="port-list">           
+            <a href="https://www.figma.com/file/hDN6xgjmfzXSS754vspHpo/SITEMAP?type=design&node-id=0%3A1&mode=design&t=qiU5f8nlinETx9a4-1"><img class="logo" src="imagens/Frame 7.png" alt="logo figma">
+            <h2>Figma</h2>
+        </a>
+        </div>
+    </section>
+    <section class="grupo">
+        <div class="title-grupo">
+            <h3>ASTROMUSIC</h3>
+            <p>Proposta do grupo</p>
+            <p>Nosso stream tem como objetico revolucionar o mercado da música, proporcionando o melhor para os nossos clientes. Focado em um publico alvo jovem adulto, veja nossos outros trabalhos. </p>
+            <ul>
+                <li>Projeto Manual de Identidade</li>
+                <a href="https://www.figma.com/file/VcVz71onX3jrNG50iMoFtm/ASTROMUSIC-TELAS?type=design&node-id=0%3A1&mode=design&t=SkG4muLsTANk9cTG-1"><li>Projeto Figma</li></a>               
+                <li>Projeto Github</li>
+            </ul>
+        </div>
+        <div class="logo-grupo">
+        <img class="logo-grupo" src="imagens/Ativo 4.png">
+        </div>   
+    </section>
+    <section class="grupos-title">
+        <h3>Todos os grupos</h3>
+        <p>Veja aqui os projetos dos grupos da turma 2023 do Técnico de Multimídia.</p>
+        <div class="Grupos">
+            <div class="grupos">
+                <a href="">
+                    <img class="logo" src="imagens/cinebrasil.png" alt="Cine Brasil">
+                </a>
+            </div>
+            <div class="grupos">
+                <a href="">
+                <img class="logo" src="imagens/caven.png" alt="Caven">
+                </a>
+            </div>
+            <div class="grupos">
+                <a href="">
+                <img class="logo" src="imagens/Ativo 5.png" alt="Astromusic">
+                </a>
+            </div>
+            <div class="grupo">
+                <a href="">
+                <img class="logo" src="imagens/booklet.png" alt="Booklet">
+                </a>
+            </div>
+            <div class="grupo">
+                <a href="">
+                <img class="logo-small" src="imagens/marts.png" alt="Marts">
+                </a>
+            </div>
+            <div class="grupo">
+                <a href="">
+                <img class="logo-small" src="imagens/leron.png" alt="Leron">
+                </a>
+            </div>
+            <div class="grupo">
+                <a href="">
+                <img class="logo-small" src="imagens/playo.png" alt="Play.o">
+                </a>
+            </div>
+        </div>
+    </section>
+</body>
+</html>
