--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
             <h2>LinkedIn</h2>            
         </div>
         <div class="port-list">           
-            <img class="logo" src="imagens/Frame 6.png" alt="logo github">
+            <a href="https://github.com/LauraSanchesP"><img class="logo" src="imagens/Frame 6.png" alt="logo github">
             <h2>Github</h2>
+        </a>
         </div>
         <div class="port-list">           
             <a href="https://www.figma.com/file/hDN6xgjmfzXSS754vspHpo/SITEMAP?type=design&node-id=0%3A1&mode=design&t=qiU5f8nlinETx9a4-1"><img class="logo" src="imagens/Frame 7.png" alt="logo figma">
