--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <p>Proposta do grupo</p>
             <p>Nosso stream tem como objetico revolucionar o mercado da música, proporcionando o melhor para os nossos clientes. Focado em um publico alvo jovem adulto, veja nossos outros trabalhos. </p>
             <ul>
-                <img src="imagens/MANUAL DE IDENTIDADE VISUAL_LAURA SANCHES PEREIRA.pdf" alt=""><li>Projeto Manual de Identidade</li>
+                <a href="imagens/MANUAL DE IDENTIDADE VISUAL_LAURA SANCHES PEREIRA.pdf"><li>Projeto Manual de Identidade</li>
                 <a href="https://www.figma.com/file/VcVz71onX3jrNG50iMoFtm/ASTROMUSIC-TELAS?type=design&node-id=0%3A1&mode=design&t=SkG4muLsTANk9cTG-1"><li>Projeto Figma</li></a>               
                 <li>Projeto Github</li>
             </ul>
