--- a/index.html
+++ b/index.html
@@ -2,61 +2,101 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLANOS</title>
     <link rel="stylesheet" href="style.css">
-
+    <title>Laura Sanches</title>
 </head>
-<body>
-    <section class="planos">
-    <h1>CONHEÇA NOSSOS PLANOS</h1>
-
-    <div class="planos-container">
-        <div class="plano">
-            <h2>Plano Individual</h2>
-            <p>Aproveite o melhor da música onde quer que esteja!<br> Com o nosso plano individual, você terá acesso ilimitado a milhões de músicas, playlists personalizadas e recomendações exclusivas. Mergulhe em um mundo musical único, criado especialmente para você.</p>
-            <div class="preco">R$15,90/mês</div>
-            <div class="botao">
-                <a href="#">Contratar Plano</a>
+  <body>
+    <section class="capa">
+          <div class="sobreocurso">
+            <img class="Senai" src="imagens/SENAI.png" alt="">
+            <h1>Multmídia</h1>
+            <h3>SENAI - José Bonifácio</h3>
+            <p>Projeto Individual</p>
+            <p>Sprint 4 - 1º semestre - Turma 2023</p>
+        </div>
+    </section>
+    <section class="aluno">
+        <div class="sobremim">
+            <img class="fotolaura"src="imagens/158A2883.jpg" alt="foto perfil laura">
+        </div>
+        <div class="sobremim">
+            <h2>Laura Sanches Pereira</h2>
+            <p>Eu sou a Laura, tenho 16 anos e atualmente sou aluna do Senai. Gosto de cozinhar e ouvir música. Fazemos varios projetos no Senai e eu espero aprender muito mais.</p> 
+         </div>
+    </section>
+    <section class="portfolio">
+        <div class="port-list">
+            <img class="logo" src="imagens/Frame 5.png" alt="logo LinkedIn">
+            <h2>LinkedIn</h2>            
+        </div>
+        <div class="port-list">           
+            <a href="https://github.com/LauraSanchesP"><img class="logo" src="imagens/Frame 6.png" alt="logo github">
+            <h2>Github</h2>
+        </a>
+        </div>
+        <div class="port-list">           
+            <a href="https://www.figma.com/file/hDN6xgjmfzXSS754vspHpo/SITEMAP?type=design&node-id=0%3A1&mode=design&t=qiU5f8nlinETx9a4-1"><img class="logo" src="imagens/Frame 7.png" alt="logo figma">
+            <h2>Figma</h2>
+        </a>
+        </div>
+    </section>
+    <section class="grupo">
+        <div class="title-grupo">
+            <h3>ASTROMUSIC</h3>
+            <p>Proposta do grupo</p>
+            <p>Nosso stream tem como objetico revolucionar o mercado da música, proporcionando o melhor para os nossos clientes. Focado em um publico alvo jovem adulto, veja nossos outros trabalhos. </p>
+            <ul>
+                <a href="imagens/MANUAL DE IDENTIDADE VISUAL_LAURA SANCHES PEREIRA.pdf"><li>Projeto Manual de Identidade</li>
+                <a href="https://www.figma.com/file/VcVz71onX3jrNG50iMoFtm/ASTROMUSIC-TELAS?type=design&node-id=0%3A1&mode=design&t=SkG4muLsTANk9cTG-1"><li>Projeto Figma</li></a>               
+                <li>Projeto Github</li>
+            </ul>
+        </div>
+        <div class="logo-grupo">
+        <img class="logo-grupo" src="imagens/Ativo 4.png">
+        </div>   
+    </section>
+    <section class="grupos-title">
+        <h3>Todos os grupos</h3>
+        <p>Veja aqui os projetos dos grupos da turma 2023 do Técnico de Multimídia.</p>
+        <div class="Grupos">
+            <div class="grupos">
+                <a href="https://senaiprofbruna.github.io/multimidia/cinebrasil.html">
+                    <img class="logo" src="imagens/cinebrasil.png" alt="Cine Brasil">
+                </a>
+            </div>
+            <div class="grupos">
+                <a href="https://senaiprofbruna.github.io/multimidia/caven.html">
+                <img class="logo" src="imagens/caven.png" alt="Caven">
+                </a>
+            </div>
+            <div class="grupos">
+                <a href="https://senaiprofbruna.github.io/multimidia/astromusic.html">
+                <img class="logo" src="imagens/Ativo 5.png" alt="Astromusic">
+                </a>
+            </div>
+            <div class="grupo">
+                <a href="https://senaiprofbruna.github.io/multimidia/booklet.html">
+                <img class="logo" src="imagens/booklet.png" alt="Booklet">
+                </a>
+            </div>
+            <div class="grupo">
+                <a href="https://senaiprofbruna.github.io/multimidia/marts.html">
+                <img class="logo-small" src="imagens/marts.png" alt="Marts">
+                </a>
+            </div>
+            <div class="grupo">
+                <a href="https://senaiprofbruna.github.io/multimidia/leron.html">
+                <img class="logo-small" src="imagens/leron.png" alt="Leron">
+                </a>
+            </div>
+            <div class="grupo">
+                <a href="https://senaiprofbruna.github.io/multimidia/playo.html">
+                <img class="logo-small" src="imagens/playo.png" alt="Play.o">
+                </a>
             </div>
         </div>
-
-        <div class="plano">
-            <h2>Plano Duo</h2>
-            <p>Compartilhe o ritmo da música com alguém especial!<br> Nosso plano Duo permite que você e seu parceiro(a) desfrutem juntos de toda a diversidade musical disponível. Crie playlists colaborativas, descubra novos artistas e compartilhe momentos inesquecíveis embalados pela trilha sonora perfeita.</p>
-            <div class="preco">R$28,60/mês</div>
-            <div class="botao">
-                <a href="#">Contratar Plano</a>
-            </div>
-        </div>
-
-        <div class="plano">
-            <h2>Plano Família</h2>
-            <p>Crie uma trilha sonora para toda a família!<br> Nosso plano Família oferece música para todos os membros. Até 5 pessoas podem desfrutar de todas as funcionalidades do nosso serviço, criando playlists personalizadas, explorando gêneros variados e tornando cada momento em família ainda mais especial.</p>
-            <div class="preco">R$63,50/mês</div>
-            <div class="botao">
-                <a href="#">Contratar Plano</a>
-            </div>
-        </div>
-
-        <div class="plano">
-            <h2>Plano Amigos</h2>
-            <p> A música é melhor quando compartilhada!<br> Reúna seus amigos e aproveitem juntos nossa oferta exclusiva. Com nosso plano amigos você e mais 8 amigos terão acesso a um universo musical incrível. Compartilhem playlists, descubram artistas em conjunto e criem memórias musicais que durarão para sempre.</p>
-            <div class="preco">R$81,00/mês</div>
-            <div class="botao">
-                <a href="#">Contratar Plano</a>
-            </div>
-        </div>
-
-        <div class="plano">
-            <h2>Plano Universitário</h2>
-            <p>Estudar, relaxar, se concentrar - a música perfeita para acompanhar a sua vida acadêmica!<br> Nosso plano Universitário é especialmente criado para estudantes como você. Desfrute de playlists selecionadas para ajudar na concentração, playlists de descoberta para expandir seus horizontes musicais e muito mais, tudo a um preço acessível para o seu orçamento de estudante.</p>
-            <div class="preco">R$5,90/mês</div>
-            <div class="botao">
-                <a href="#">Contratar Plano</a>
-            </div>
-        </div>
-    </div>
-</section>
+    </section>
 </body>
 </html>
