--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <ul>
                 <a href="imagens/MANUAL DE IDENTIDADE VISUAL_LAURA SANCHES PEREIRA.pdf"><li>Projeto Manual de Identidade</li>
                 <a href="https://www.figma.com/file/VcVz71onX3jrNG50iMoFtm/ASTROMUSIC-TELAS?type=design&node-id=0%3A1&mode=design&t=SkG4muLsTANk9cTG-1"><li>Projeto Figma</li></a>               
-                <li>Projeto Github</li>
+                 <a href="pagina.html"><li>Projeto Github</li></a>
             </ul>
         </div>
         <div class="logo-grupo">
