--- a/pagina.html
+++ b/pagina.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASTROMUSIC</title>
     <link rel="stylesheet" href="pagina.css">
+    <link rel="icon" href="IMAGENS/Ativo 4.png">
 </head>
 <body>
     <section class="capa">
@@ -21,6 +22,16 @@
             </div>
         </div>
     </section>
+    <section class="mockup">
+        <div>
+            <section class="">
+            <img class="logo" src="IMAGENS/Rectangle 10.png" alt="astromusic">
+            <p class="celular2">Descubra a revolução musical no novo aplicativo de música com design moderno e intuitivo. Explore um universo musical ilimitado com suas músicas favoritas a um toque de distância. Conecte-se com amantes da música, compartilhe momentos nas redes sociais e descubra novas experiências sonoras. Baixe agora e embarque em uma jornada musical emocionante. Viva uma experiência única com nosso app de música e abrace a revolução musical.
+            </p>
+        </section>
+        </div>
+                <img class="celular" src="IMAGENS/Group 1.png" alt="celular">
+        </section>
     <section class="planos" id="planos">
         <h2>CONHEÇA NOSSOS PLANOS</h2>
         <div class="planos-container">
