--- a/pagina.html
+++ b/pagina.html
@@ -10,7 +10,7 @@
 <body>
     <section class="capa">
         <header>
-            <img class="logo" src="IMAGENS/Ativo 5.png" alt="logo">
+            <img class="logo" src="imagens/Ativo 5.png" alt="logo">
         </header>
         <div class="principal">
             <div class="textos">
@@ -25,12 +25,12 @@
     <section class="mockup">
         <div>
             <section class="">
-            <img class="logo" src="IMAGENS/Rectangle 10.png" alt="astromusic">
+            <img class="logo" src="imagens/Rectangle 10.png" alt="astromusic">
             <p class="celular2">Descubra a revolução musical no novo aplicativo de música com design moderno e intuitivo. Explore um universo musical ilimitado com suas músicas favoritas a um toque de distância. Conecte-se com amantes da música, compartilhe momentos nas redes sociais e descubra novas experiências sonoras. Baixe agora e embarque em uma jornada musical emocionante. Viva uma experiência única com nosso app de música e abrace a revolução musical.
             </p>
         </section>
         </div>
-                <img class="celular" src="IMAGENS/Group 1.png" alt="celular">
+                <img class="celular" src="imagens/Group 1.png" alt="celular">
         </section>
     <section class="planos" id="planos">
         <h2>CONHEÇA NOSSOS PLANOS</h2>
