--- a/pagina.html
+++ b/pagina.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASTROMUSIC</title>
     <link rel="stylesheet" href="pagina.css">
-    <link rel="icon" href="IMAGENS/Ativo 4.png">
+    <link rel="icon" href="imagens/Ativo 4.png">
 </head>
 <body>
     <section class="capa">
