--- a/pagina.html
+++ b/pagina.html
@@ -121,7 +121,7 @@
                 <img class="music" src="imagens/C.01.jpg" alt="imagem 3">
                 <img class="music" src="imagens/c13.jpg" alt="imagem 4" >
             </div>
-            <h3>Só na Atromusic você encontra as melhores musicas, podcasts e outros conteúdos inéditos!</h3>   <div class="image">
+            <h3>Só na Astromusic você encontra as melhores musicas, podcasts e outros conteúdos inéditos!</h3>   <div class="image">
                 <img class="music" src="imagens/c14.webp" alt="imagem 5" >
                 <img class="music" src="imagens/C.09.jpg" alt="imagem 6" >
                 <img class="music" src="imagens/C.07.jpg" alt="imagem 7" >
